// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render NO guest info to match snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="guest-book"
    style="display: flex; flex-direction: column; gap: 3px; min-height: 50%; width: 99%;"
    title="This component displays everyone who has signed my guest book. It's an exercise in HTTP requests and dependency injection!"
  >
    <a
      class="clickable"
      href="https://github.com/atb-brown/guest-book/edit/main/guests.json"
      style="align-items: center; align-self: flex-end; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; border-top-left-radius: 15px; color: white; display: flex; font-size: 80%; height: 85px; justify-content: center; text-decoration: none; width: 15%;"
    >
      Sign my guest book!
    </a>
  </div>
</DocumentFragment>
`;

exports[`render multiple guest info to match snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="guest-book"
    style="display: flex; flex-direction: column; gap: 3px; min-height: 50%; width: 99%;"
    title="This component displays everyone who has signed my guest book. It's an exercise in HTTP requests and dependency injection!"
  >
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 15px; border-top-right-radius: 15px; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          austin
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="www.example.com"
          >
            www.example.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          info loaded
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person2
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website2.com"
          >
            website2.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 2
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-02
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person3
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website3.com"
          >
            website3.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 3
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-03
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person4
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website4.com"
          >
            website4.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 4
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-04
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person5
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website5.com"
          >
            website5.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 5
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-05
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 0; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person6
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website6.com"
          >
            website6.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 6
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-06
      </div>
    </div>
    <div
      style="border-bottom-left-radius: 15px; border-top-left-radius: 0; border-top-right-radius: 0; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          person7
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="website7.com"
          >
            website7.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          my message 7
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023-01-07
      </div>
    </div>
    <a
      class="clickable"
      href="https://github.com/atb-brown/guest-book/edit/main/guests.json"
      style="align-items: center; align-self: flex-end; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; border-top-left-radius: 15px; color: white; display: flex; font-size: 80%; height: 85px; justify-content: center; text-decoration: none; width: 15%;"
    >
      Sign my guest book!
    </a>
  </div>
</DocumentFragment>
`;

exports[`render single guest info to match snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="guest-book"
    style="display: flex; flex-direction: column; gap: 3px; min-height: 50%; width: 99%;"
    title="This component displays everyone who has signed my guest book. It's an exercise in HTTP requests and dependency injection!"
  >
    <div
      style="border-bottom-left-radius: 15px; border-top-left-radius: 15px; border-top-right-radius: 15px; display: flex; height: 85px; overflow: hidden; width: 100%;"
    >
      <div
        class="Guests-Visual"
        style="flex: 2; flex-direction: column; justify-content: space-evenly;"
      >
        <div
          class="Guests-Text-container"
          style="font-size: 75%;"
        >
          austin
        </div>
        <div
          class="Guests-Text-container"
          style="font-size: 50%; justify-content: center;"
        >
          <a
            href="www.example.com"
          >
            www.example.com
          </a>
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 7; margin-left: 3px; margin-right: 3px;"
      >
        <div
          class="Guests-Text-Container"
          style="font-size: 75%; height: 100%; width: 98%;"
        >
          info loaded
        </div>
      </div>
      <div
        class="Guests-Visual Guests-Text-Container"
        style="flex: 1; font-size: 60%;"
      >
        2023
      </div>
    </div>
    <a
      class="clickable"
      href="https://github.com/atb-brown/guest-book/edit/main/guests.json"
      style="align-items: center; align-self: flex-end; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; border-top-left-radius: 15px; color: white; display: flex; font-size: 80%; height: 85px; justify-content: center; text-decoration: none; width: 15%;"
    >
      Sign my guest book!
    </a>
  </div>
</DocumentFragment>
`;
